kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-server
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-web-server
